--- a/_layouts/adacon20.html
+++ b/_layouts/adacon20.html
@@ -771,12 +771,7 @@
 
         <!-- Tab panes -->
         <div class="schedule-tab-content tab-content">
-          <div
-            class="tab-pane active"
-            id="tab-1-content"
-            role="tabpanel"
-            aria-labelledby="tab-1"
-          >
+          <div class="tab-pane active" id="tab-1-content" role="tabpanel">
             <div class="item item-talk">
               <div class="meta">
                 <h4 class="time mb-3">9:00 - 9:30</h4>
@@ -1225,7 +1220,7 @@
         <div class="schedule-cta text-center mx-auto">
           <a
             href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
-            class="btn btn-secondary btn-lg d-block d-md-inline-block"
+            class="btn btn-primarybtn-lg d-block d-md-inline-block"
             target="_blank"
             >Get Tickets</a
           >
