--- a/_sass/20/_home.scss
+++ b/_sass/20/_home.scss
@@ -122,7 +122,7 @@
   }
   .unit {
     font-size: 1.5rem;
-    color: rgba(0, 0, 0, 0.6);
+    color: #ffffffb3;
   }
 }
 
@@ -144,7 +144,7 @@
     color: $theme-text-color-primary;
   }
   .unit {
-    @include opacity(0.8);
+    @include opacity(0.9);
   }
 }
 
