fix: add rel="noopener noreferrer"

--- a/_layouts/adacon20.html
+++ b/_layouts/adacon20.html
@@ -48,6 +48,7 @@
                 class="btn btn-secondary"
                 href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
                 target="_blank"
+                rel="noopener noreferrer"
                 >Tickets</a
               >
             </div>
@@ -151,6 +152,7 @@
               class="btn btn-primary btn-lg"
               href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
               target="_blank"
+              rel="noopener noreferrer"
               >Get Tickets</a
             >
           </div>
@@ -213,9 +215,14 @@
             as part of your conference package?</strong
           >
           Check out our programming tees at
-          <a href="https://made4dev.com/" target="_blank">made4dev.com</a> -
-          developers love them! Want to get a bulk discount or just want to use
-          one of the t-shirt designs? Please email
+          <a
+            href="https://made4dev.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >made4dev.com</a
+          >
+          - developers love them! Want to get a bulk discount or just want to
+          use one of the t-shirt designs? Please email
           <a href="mailto:hello@made4dev.com">hello@made4dev.com</a> and we can
           discuss.
         </div>
@@ -251,7 +258,7 @@
             </li>
             <li>
               <i data-feather="check-circle" class="mr-2"></i>Free
-              <a href="https://made4dev.com">developer t-shirts</a> and swag
+              <a href="https://made4dev.com" target="_blank" rel="noopener noreferrer">developer t-shirts</a> and swag
             </li>
           </ul>
         </div>
@@ -272,6 +279,7 @@
             class="btn btn-primary btn-lg  mb-5"
             href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
             target="_blank"
+            rel="noopener noreferrer"
             >Get Your Ticket Today</a
           >
         </div>
@@ -753,6 +761,7 @@
             class="btn btn-primary btn-lg"
             href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
             target="_blank"
+            rel="noopener noreferrer"
             >Get Tickets</a
           >
         </div>
@@ -1222,6 +1231,7 @@
             href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
             class="btn btn-primarybtn-lg d-block d-md-inline-block"
             target="_blank"
+            rel="noopener noreferrer"
             >Get Tickets</a
           >
         </div>
@@ -1242,6 +1252,7 @@
             class="theme-link"
             href="https://www.eventbrite.com/"
             target="_blank"
+            rel="noopener noreferrer"
             >eventbrite</a
           >
           and
@@ -1249,6 +1260,7 @@
             class="theme-link"
             href="https://www.tickettailor.com/"
             target="_blank"
+            rel="noopener noreferrer"
             >tickettailor</a
           >
           to sell your tickets.
@@ -1361,7 +1373,10 @@
             <li>
               <span class="icon-holder mr-2"><i data-feather="gift"></i></span
               >FREE
-              <a href="https://made4dev.com/" target="_blank"
+              <a
+                href="https://made4dev.com/"
+                target="_blank"
+                rel="noopener noreferrer"
                 >premium developer tees from made4dev</a
               >
             </li>
@@ -1627,24 +1642,38 @@
       <div class="container text-center">
         <ul class="social-list list-inline mb-4">
           <li class="list-inline-item mr-3">
-            <a href="https://twitter.com/techwomennorway" title="Twitter"
+            <a
+              href="https://twitter.com/techwomennorway"
+              title="Twitter"
+              target="_blank"
+              rel="noopener noreferrer"
               ><i data-feather="twitter"></i
             ></a>
           </li>
           <li class="list-inline-item mr-3">
-            <a href="https://www.instagram.com/techwomen/" title="Instagram"
+            <a
+              href="https://www.instagram.com/techwomen/"
+              title="Instagram"
+              target="_blank"
+              rel="noopener noreferrer"
               ><i data-feather="instagram"></i
             ></a>
           </li>
           <li class="list-inline-item mr-3">
             <a
               href="https://www.youtube.com/channel/UCvwOLmtghrG0G4USdI7sBPw"
+              target="_blank"
+              rel="noopener noreferrer"
               title="YouTube"
               ><i data-feather="youtube"></i
             ></a>
           </li>
           <li class="list-inline-item mr-0">
-            <a href="https://github.com/tech-women" title="GitHub"
+            <a
+              href="https://github.com/tech-women"
+              title="GitHub"
+              target="_blank"
+              rel="noopener noreferrer"
               ><i data-feather="github"></i
             ></a>
           </li>
@@ -1653,10 +1682,20 @@
 
         <ul class="footer-links list-inline mx-auto mb-4">
           <li class="list-inline-item">
-            <a href="https://techwomen.no/">Tech Women Norway</a>
+            <a
+              href="https://techwomen.no/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Tech Women Norway</a
+            >
           </li>
           <li class="list-inline-item">
-            <a href="https://techwomen.no/code-of-conduct">Code of Conduct</a>
+            <a
+              href="https://techwomen.no/code-of-conduct"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Code of Conduct</a
+            >
           </li>
         </ul>
         <!--//footer-link-->
@@ -1664,14 +1703,25 @@
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
         <small class="copyright"
           >Design based on the awesome
-          <a href="https://github.com/xriley/DevConf-Theme" target="_blank"
+          <a
+            href="https://github.com/xriley/DevConf-Theme"
+            target="_blank"
+            rel="noopener noreferrer"
             >DevConf theme</a
           >
           by
-          <a href="http://themes.3rdwavemedia.com" target="_blank"
+          <a
+            href="http://themes.3rdwavemedia.com"
+            target="_blank"
+            rel="noopener noreferrer"
             >Xiaoying Riley</a
-          >, adapted for Jekyll/GitHub pages by
-          <a href="https://coderbyheart.com/">Markus Tacker</a>.</small
+          >, <a href="https://github.com/tech-women/adacon" target="_blank" rel="noopener noreferrer">adapted for Jekyll/GitHub</a> pages by
+          <a
+            href="https://coderbyheart.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Markus Tacker</a
+          >.</small
         >
       </div>
       <!--//container-->
