fix(uncss): preserve theme styles

--- a/_sass/20/_home.scss
+++ b/_sass/20/_home.scss
@@ -1,3 +1,4 @@
+/* uncss:ignore start */
 /* Header */
 
 .header {
@@ -547,3 +548,5 @@
 // Large devices (desktops, less than 1200px)
 @media (max-width: 1199.98px) {
 }
+
+/* uncss:ignore end */
