--- a/_layouts/adacon20.html
+++ b/_layouts/adacon20.html
@@ -21,7 +21,7 @@
   {% if page.mode == "development" %}
   <link id="theme-style" rel="stylesheet" href="theme.css" />
   {% else %}
-  <link id="theme-style" rel="stylesheet" href="./theme.uncss.css" />
+  <link id="theme-style" rel="stylesheet" href="./theme.uncss.css?v={{ site.github.build_revision }}" />
   {% endif %}
 </head>
 
@@ -1359,14 +1359,14 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-  <script src="assets/plugins/jquery.scrollTo.min.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/plugins/jquery.scrollTo.min.js?v={{ site.github.build_revision }}"></script>
+  <script src="assets/js/main.js?v={{ site.github.build_revision }}"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <script>
     feather.replace();
   </script>
   <script async src="https://afarkas.github.io/lazysizes/lazysizes.min.js" crossorigin="anonymous"></script>
-  <script async src="assets/js/carousel.js?2"></script>
+  <script async src="assets/js/carousel.js?v={{ site.github.build_revision }}"></script>
 </body>
 
 </html>
