--- a/20/theme.uncss.css
+++ b/20/theme.uncss.css
@@ -855,9 +855,6 @@ button.close {
 .mx-2 {
   margin-left: 0.5rem !important; }
 
-.mt-3 {
-  margin-top: 1rem !important; }
-
 .mr-3 {
   margin-right: 1rem !important; }
 
@@ -882,7 +879,6 @@ button.close {
 .p-3 {
   padding: 1rem !important; }
 
-.pt-3,
 .py-3 {
   padding-top: 1rem !important; }
 
@@ -933,9 +929,6 @@ button.close {
 
   .mr-lg-3 {
     margin-right: 1rem !important; }
-
-  .mt-lg-5 {
-    margin-top: 3rem !important; }
 
   .p-lg-4 {
     padding: 1.5rem !important; }
@@ -1201,14 +1194,6 @@ a.theme-link {
   background: #37c9ff; }
   .btn-secondary:hover {
     background: #04bbff; }
-
-.btn-ghost {
-  background: none;
-  border: 2px solid #fff;
-  color: #fff; }
-  .btn-ghost:hover {
-    background: #fff;
-    color: #781e7c; }
 
 .theme-bg-light {
   background: #f0f6fa; }
@@ -1546,6 +1531,17 @@ a.theme-link {
   .venue-section .grid-item .svg-inline--fa {
     font-size: 1.25rem; }
 
+.tiles {
+  display: grid;
+  grid-template: 1fr / auto;
+  grid-gap: 1.5rem; }
+  .tiles .tile {
+    border: 1px solid #fff;
+    padding: 1rem; }
+
+@media (min-width: 576px) {
+  .tiles {
+    grid-template: 1fr 1fr / 1fr 1fr; } }
 /* Sponsors */
 .logo-item {
   margin-bottom: 1rem; }
