--- a/_layouts/adacon20.html
+++ b/_layouts/adacon20.html
@@ -73,7 +73,7 @@
 
             <div
               id="navigation"
-              class="navbar-collapse collapse  justify-content-lg-end mr-lg-3"
+              class="navbar-collapse collapse justify-content-lg-end mr-lg-3"
             >
               <ul class="nav navbar-nav">
                 <li class="nav-item">
@@ -300,7 +300,7 @@
         <!--//event-countdown-->
         <div class="about-cta text-center mb-5">
           <a
-            class="btn btn-primary btn-lg  mb-5"
+            class="btn btn-primary btn-lg mb-5"
             href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/"
             target="_blank"
             rel="noopener noreferrer"
@@ -815,7 +815,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/5d65255a83c24e211a77a2d181ee53f6af2ac291-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -865,7 +865,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/3f60c98646be2a539f2430fd40a60381df55f5b1-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -931,7 +931,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/7d68371de5e4bce3cf402779a4d3bac4c3405e1c-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -979,7 +979,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/c911e12900ed3f392cc3f80e4ea153e59d235df7-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -1045,7 +1045,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/77eafa13917ab82aa03ef454d9d812a09d156163-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -1093,7 +1093,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/fffa5200260bf7c1fbdec1b533da7a145ca0df72-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -1141,7 +1141,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/ad7098fad8e630218f7fa650bbd0cfd038fb08e7-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -1189,7 +1189,7 @@
                     title="Show speaker details"
                     data-target="#modal-speaker-1"
                     ><img
-                      class="lazyload profile-image rounded-circle  mb-2"
+                      class="lazyload profile-image rounded-circle mb-2"
                       data-src="https://cdn.sanity.io/images/q0ipzqdg/production/e50fd8e4dbaf04547e0147b2bb044133e6d2f222-500x500.jpg?w=640&h=480&fm=webp&fit=max&q=90"
                       alt=""
                   /></a>
@@ -1294,7 +1294,7 @@
           <div class="col-12 col-md-4 p-2 p-lg-4">
             <div class="card rounded-0 border-0">
               <div class="card-body p-0">
-                <div class="heading  text-center p-3">
+                <div class="heading text-center p-3">
                   <h4 class="text-white mb-0">Super Early Bird</h4>
                 </div>
                 <div class="info p-3">
@@ -1320,7 +1320,7 @@
           <div class="col-12 col-md-4 p-2 p-lg-4">
             <div class="card card-special rounded-0 border-0">
               <div class="card-body p-0">
-                <div class="heading  text-center p-3">
+                <div class="heading text-center p-3">
                   <h4 class="text-white mb-0">Early Bird</h4>
                 </div>
                 <div class="info p-3">
@@ -1347,7 +1347,7 @@
           <div class="col-12 col-md-4 p-2 p-lg-4">
             <div class="card rounded-0 border-0">
               <div class="card-body p-0">
-                <div class="heading  text-center p-3">
+                <div class="heading text-center p-3">
                   <h4 class="text-white mb-0">Regular</h4>
                 </div>
                 <div class="info p-3">
@@ -1420,98 +1420,79 @@
 
     <section
       id="venue-section"
-      class="venue-section section  theme-bg-primary text-white"
+      class="venue-section section theme-bg-primary text-white"
     >
       <div class="container">
         <h3 class="section-heading text-center mb-5 text-white">Venue</h3>
         <div class="row py-lg-5">
           <div class="col-12 col-lg-7 h-100">
             <div class="desc">
-              <h4 class="text-white mb-3">How To Get Here</h4>
+              <h4 class="text-white mb-3">Auditorium</h4>
               <p>
-                Your venue info goes here. Sed feugiat nibh lorem, a laoreet sem
-                aliquet ut. Praesent tincidunt efficitur nisi, ut eleifend diam
-                tempor sit amet. Aliquam volutpat ex feugiat, semper urna a,
-                pharetra lacus. Sed eget eros cursus, consequat lectus
-                ultricies, efficitur metus. Sed sit amet mauris faucibus magna
-                finibus convallis vel quis justo. Curabitur ultricies sagittis
-                erat, quis faucibus lectus tempor vitae. Proin sodales, elit
-                vitae accumsan efficitur, orci quam molestie orci, accumsan
-                tincidunt dui turpis sed libero. Duis id vehicula ex. In quis
-                pellentesque lorem, ut sollicitudin mauris.
+                Kolonial.no AS<br />
+                Nydalsveien 28<br />
+                0484 Oslo
               </p>
 
-              <div class="row pt-3">
-                <div class="col-12 col-md-6 mb-4">
-                  <div class="grid-item p-4">
-                    <h5 class="text-white mb-3 title">
-                      By Plane
-                    </h5>
-                    <p>
-                      Aliquam gravida, enim et efficitur feugiat, tellus ligula
-                      scelerisque orci, et sagittis erat lectus sit amet orci.
-                    </p>
-                    <a class="text-white" href="#">Search Tickets &rarr;</a>
-                  </div>
-                  <!--//grid-item-->
+              <h4 class="text-white mb-3">How To Get Here</h4>
+
+              <div class="tiles">
+                <div class="tile">
+                  <h5 class="text-white mb-3 title">
+                    By Plane
+                  </h5>
+                  <p>
+                    Take the plane to Oslo-Gardermoen (OSL) and from their take
+                    the train to Nydalen station (ca. 1 hour).
+                  </p>
                 </div>
-                <!--col-->
-                <div class="col-12 col-md-6 mb-4">
-                  <div class="grid-item p-4">
-                    <h5 class="text-white mb-3 title">
-                      By Car
-                    </h5>
-                    <p>
-                      Aliquam gravida, enim et efficitur feugiat, tellus ligula
-                      scelerisque orci, et sagittis erat lectus sit amet orci.
-                    </p>
-                    <a class="text-white" href="#">Check Route &rarr;</a>
-                  </div>
-                  <!--//grid-item-->
+                <div class="tile">
+                  <h5 class="text-white mb-3 title">
+                    By Car
+                  </h5>
+                  <p>
+                    Drive directly to the venue address. Parking is available in
+                    the parking garage directly behind the building.
+                  </p>
+                  <a
+                    class="text-white"
+                    href="https://goo.gl/maps/WxTouRr5tk1Fskxz6"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Get directions &rarr;</a
+                  >
                 </div>
-                <!--col-->
-                <div class="col-12 col-md-6 mb-4">
-                  <div class="grid-item p-4">
-                    <h5 class="text-white mb-3 title">
-                      By Bus
-                    </h5>
-                    <p>
-                      Aliquam gravida, enim et efficitur feugiat, tellus ligula
-                      scelerisque orci, et sagittis erat lectus sit amet orci.
-                    </p>
-                    <a class="text-white" href="#">Book Tickets &rarr;</a>
-                  </div>
-                  <!--//grid-item-->
+                <div class="tile">
+                  <h5 class="text-white mb-3 title">
+                    By Train
+                  </h5>
+                  <p>
+                    <strong>Nydalen stasjon</strong> is the closest train stop.
+                  </p>
+                  <a
+                    class="text-white"
+                    href="https://ruter.no/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Check train routes &rarr;</a
+                  >
                 </div>
-                <!--col-->
-                <div class="col-12 col-md-6 mb-4">
-                  <div class="grid-item p-4">
-                    <h5 class="text-white mb-3 title">
-                      By Train
-                    </h5>
-                    <p>
-                      Aliquam gravida, enim et efficitur feugiat, tellus ligula
-                      scelerisque orci, et sagittis erat lectus sit amet orci.
-                    </p>
-                    <a class="text-white" href="#">Book Tickets &rarr;</a>
-                  </div>
-                  <!--//grid-item-->
+                <div class="tile">
+                  <h5 class="text-white mb-3 title">
+                    By Bus
+                  </h5>
+                  <p>
+                    There are multiple bus-stops close to the venue.
+                  </p>
+                  <a
+                    class="text-white"
+                    href="https://ruter.no/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Check bus routes &rarr;</a
+                  >
                 </div>
-                <!--col-->
               </div>
-              <!--//row-->
-              <h4 class="text-white mb-4 mt-3 mt-lg-5">
-                Facilities &amp; Accommodations
-              </h4>
-              <p>
-                Your venue info goes here. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Proin consequat magna eu accumsan
-                mattis. Duis non augue porttitor, fringilla velit vitae,
-                ultricies eros. Sed libero eros, tristique ac orci nec,
-                hendrerit dictum lacus. Aenean iaculis massa felis, eget
-                venenatis turpis lacinia sit amet.
-              </p>
-              <a class="btn btn-ghost" href="#">Search Hotels</a>
             </div>
             <!--//desc-->
           </div>
@@ -1523,29 +1504,15 @@
               <div class="figure figure-1">
                 <img
                   class="shadow lazyload"
-                  data-src="https://cdn.sanity.io/images/q0ipzqdg/production/d35bfd48b1f82e0eb80d4c85811383a27e377b5e-800x534.jpg?w=640&h=480&fm=webp&fit=max&q=90"
-                  alt=""
+                  data-src="https://cdn.sanity.io/images/q0ipzqdg/production/4fecd05845b92385eb14b75252c58aeead202c93-454x340.jpg?w=640&h=480&fm=webp&fit=max&q=90"
+                  alt="Nydalsveien 28, 0484 Oslo"
                 />
               </div>
               <div class="figure figure-2">
                 <img
                   class="shadow lazyload"
-                  data-src="https://cdn.sanity.io/images/q0ipzqdg/production/d37c1dde409a0f14182ba86f2835dc7fa79a0132-800x533.jpg?w=640&h=480&fm=webp&fit=max&q=90"
-                  alt=""
-                />
-              </div>
-              <div class="figure figure-3">
-                <img
-                  class="shadow lazyload"
-                  data-src="https://cdn.sanity.io/images/q0ipzqdg/production/4ba402ed35259f6f693859b0cd186b054b8e0346-800x533.jpg?w=640&h=480&fm=webp&fit=max&q=90"
-                  alt=""
-                />
-              </div>
-              <div class="figure figure-4">
-                <img
-                  class="shadow lazyload"
-                  data-src="https://cdn.sanity.io/images/q0ipzqdg/production/3ac9b8aac972e53dc6e3ecbab9fa6694abd7b50d-800x600.jpg?w=640&h=480&fm=webp&fit=max&q=90"
-                  alt=""
+                  data-src="https://cdn.sanity.io/images/q0ipzqdg/production/ea002948d1f6f94359864259b0afd822a39e40f9-703x450.jpg?w=640&h=480&fm=webp&fit=max&q=90"
+                  alt="Nydalsveien 28, 0484 Oslo"
                 />
               </div>
             </div>
