--- a/_layouts/adacon20.html
+++ b/_layouts/adacon20.html
@@ -1529,102 +1529,42 @@
     <section id="sponsors-section" class="sponsors-section section">
       <div class="container">
         <h3 class="section-heading text-center mb-3">
-          Sponsors &amp; Partners
+          Sponsors
         </h3>
         <div class="section-intro text-center single-col-max mx-auto mb-5">
-          Want to become a sponsor? Get in touch lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Proin consequat magna eu accumsan mattis.
+          {{ site.name }} is supported by:
         </div>
-        <div class="row logos justify-content-center">
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-1.svg"
-              alt=""
-            />
+        <div class="sponsors">
+          <div>
+            <a
+              href="https://kolonial.no"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                class="lazyload"
+                data-src="https://cdn.sanity.io/images/q0ipzqdg/production/c9b1e72f4e9a6a1d4e993eb2449e53b20dac5061-129x16.svg"
+                alt="Kolonial.no AS"
+              />
+            </a>
+            Location Sponsor
           </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-2.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-3.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-4.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-5.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-6.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-7.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-8.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-9.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-10.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-11.svg"
-              alt=""
-            />
-          </div>
-          <div class="logo-item col-6 col-md-4 col-lg-2">
-            <img
-              class="lazyload"
-              data-src="assets/images/logos/logo-12.svg"
-              alt=""
-            />
+          <div>
+            <a
+              href="https://turtlesec.no/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                class="lazyload"
+                data-src="https://cdn.sanity.io/images/q0ipzqdg/production/1122e99fea84cf8d8e68537a958030c98282c235-209x66.svg"
+                alt="TurtleSec AS"
+              />
+            </a>
+            Gold Sponsor
           </div>
         </div>
         <!--//row-->
-        <div class="sponsors-cta text-center pt-5">
-          <a class="btn-primary btn btn-lg" href="#">Become A Sponsor</a>
-        </div>
       </div>
       <!--//container-->
     </section>
