--- a/_sass/20/_home.scss
+++ b/_sass/20/_home.scss
@@ -425,10 +425,30 @@
 }
 
 /* Sponsors */
-.logo-item {
+.sponsors {
   margin-bottom: 1rem;
-  img {
-    max-width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 85%;
+    margin-bottom: 2rem;
+    max-width: 250px;
+    a {
+      color: #415b78;
+    }
+    img {
+      width: 100%;
+      margin-bottom: 0.5rem;
+      filter: grayscale(1);
+      @include transition(all 0.4s ease-in-out);
+      &:hover {
+        filter: none;
+      }
+    }
   }
 }
 /* footer */
